# sample-smolagents

./: .gitignore  README.md  currency_agent.py  currency_exchange_managed_sample.py  currency_exchange_planning_sample.py  currency_exchange_sample.py  pyproject.toml
currency_tool/: currency.py
file_tool/: filemgr.py
mcp_servers/: file_manager_server_sse.py  file_manager_server_stdio.py
model/: ModelMgr.py
sample/mcp/sse/: file_management_managed_sample.py  file_management_sample.py
sample/mcp/stdio/: file_management_managed_sample.py  file_management_sample.py
sample/simple/: file_management_managed_sample.py  file_management_sample.py
sample_smolagents/: currency_exchange_managed_sample.py  currency_exchange_planning_sample.py  currency_exchange_sample.py  file_management_sample.py
tools/mcp/: file_manager_client_sse.py  file_manager_client_stdio.py
tools/simple/: filemgr.py
