[project]
name = "sample-smolagents"
version = "0.1.0"
description = ""

authors = [
    {name = "Ron Webb",email = "ron@ronella.xyz"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "smolagents (>=1.9.2,<2.0.0)",
    "litellm (>=1.61.20,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false